narrow viewport grid distortion bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ body{
 #buttons  {
   width: 90vw;
   max-width: 650px;
-  min-height: 70px;
+  /* min-height: 70px; */
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -78,6 +78,6 @@ body{
 }
 
 img {
-  max-width: 94%;
+  max-width: 100%;
   border-radius: 3px;
 }
